@@ -1,10 +1,11 @@
 package HW2.CreditCardNotification;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
-        List<UserInfo> users = List.of(
+        List<UserInfo> users = Arrays.asList(
                 new UserInfo("A", "User", "a@example.com", "1234567890", "whatsappId", "email"),
                 new UserInfo("B", "User", "b@example.com", "2345678901", "whatsappId", "sms")
         );
